[workspace]
members = [
  "actix-cors",
  "actix-identity",
  "actix-protobuf",
  "actix-protobuf/examples/prost-example",
  "actix-redis",
  "actix-session",
  "actix-web-httpauth",
  "actix-cookie",
]

[patch.crates-io]
actix-cors = { path = "actix-cors" }
actix-session = { path = "actix-session" }
actix-cookie = { path = "actix-cookie" }
