[package]
name = "actix-cookie"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_cookie"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.0-beta.5", default_features = false, features = ["cookies"] }